...
        ),
        bottomNavigationBar: AppBottomBar(
          currentIndex: _index,
          onSelected: (index) => setState(() => _index = index),
          center: AppOrb(onTap: _onOrbTapped),
          items: const [
            AppBottomBarItem(iconData: AppIcons.time, label: 'Tempo'),
            AppBottomBarItem(iconData: AppIcons.things, label: 'Projetos'),
            AppBottomBarItem(
              iconData: AppIcons.conversations,
              label: 'Conversas',
            ),
            AppBottomBarItem(iconData: AppIcons.menu, label: 'Menu'),
...
